--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,8 @@
     "deque": "cpp",
     "thread": "cpp",
     "future": "cpp",
-    "iomanip": "cpp"
+    "iomanip": "cpp",
+    "__memory": "cpp",
+    "cerrno": "cpp"
   }
 }
